Fix: Remove extra scrollbar

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ html,
 
 body {
     height: 100%;
-    overflow-y: scroll;
+    width: 100%;
+    /* overflow-y: auto;*/
     background-color: #333333;
 }
 
@@ -15,10 +16,10 @@ body {
     margin-top: 0px;
 
     /* This centers our sketch horizontally. */
-    justify-content: center;
+    /* justify-content: center;*/
 
     /* This centers our sketch vertically. */
-    align-items: center;
+    /* align-items: center;*/
 }
 
 * {
